# flite

./: .gitignore  BUILD.bazel  WORKSPACE
lang/: BUILD.bazel
lang/cmu_indic_lex/: cmu_indic_lex.c
lang/cmulex/: cmu_lex_entries.c
src/: BUILD.bazel
src/audio/: au_alsa.c  au_oss.c  audio.c  native_audio.h
src/utils/: cst_val_user.c
testsuite/: BUILD.bazel  flite_test_main.c  hrg_test_main.c  play_wave_main.c
toolchain/: load_sound_dep.bzl  load_sound_osx_dep..bzl
