package(default_visibility = ["//visibility:public"])

cc_library(
  name = "voice-slt",
  srcs = glob(["lang/cmu_us_slt/*.c"]),
  hdrs = glob(["lang/cmu_us_slt/*.h"]),
  deps = [
    "//lang:usenglish"
  ],
  includes = ["lang/cmu_us_slt"],
  visibility = ["//visibility:public"]
)

cc_library(
  name = "awb",
  srcs = glob(["lang/cmu_time_awb/*.c"]),
  hdrs = glob(["lang/cmu_time_awb/*.h"]),
  deps = [
    "//lang:usenglish"
  ],
  includes = ["lang/cmu_time_awb"],
  visibility = ["//visibility:public"]
)

cc_library(
  name = "headers",
  hdrs = glob(["include/*.h"]),
  includes = ["include"],
  visibility = ["//visibility:public"]
)




cc_library(
  name = "voice",
  srcs = [
    "tools/VOICE_cg.c",
    "tools/VOICE_clunits.c",
    "tools/VOICE_diphone.c",
    "tools/VOICE_ldom.c",
  ],
  deps = [
    "//:headers",
    "//lang:usenglish"
  ],
  visibility = ["//visibility:private"]
)

