package(default_visibility = ["//visibility:public"])


cc_library(
  name = "headers",
  hdrs = glob(["include/*.h"]),
  includes = ["include"],
  visibility = ["//visibility:public"]
)




cc_library(
  name = "voice",
  srcs = [
    "tools/VOICE_cg.c",
    "tools/VOICE_clunits.c",
    "tools/VOICE_diphone.c",
    "tools/VOICE_ldom.c",
  ],
  deps = [
    "//:headers",
    "//lang:usenglish"
  ],
  visibility = ["//visibility:private"]
)

