cc_library(
    name = "synth",
    srcs = [
        "synth/cst_synth.c", 
        "synth/cst_utt_utils.c", 
        "synth/cst_voice.c", 
        "synth/cst_phoneset.c",
        "synth/cst_ffeatures.c", 
        "synth/cst_ssml.c",
        "synth/flite.c"
    ],
    deps = [
        "//:headers",
        ":regex",
        ":lexicon",
        ":cg",
        ":wavesynth"
    ],
    includes = ["synth"],
    visibility = ["//visibility:public"]
)

cc_library(
  name = "audio",
  srcs = [ 
      "audio/au_command.c", 
      "audio/au_none.c", 
      "audio/au_oss.c", 
      # "audio/au_alsa.c",
      "audio/auclient.c", 
      "audio/auserver.c", 
      "audio/audio.c",
      "audio/au_streaming.c"
  ],
  hdrs = [
      # "include/cst_audio.h",
      "audio/native_audio.h",
  ],
  deps = [
        ":speech",
        # "@system_libsx86_64//:alsa", 
        "@system_include_x86_64//:soundcard",
        "@system_include_x86_64//:ioctl",
        "@system_include_x86_64//:fcntl",
      ],
      # select(
      #     {
      #         "@system_libsx86_64//:alsa": [":x86_dev_lib"],
      #         "@system_libsArm32//:alsa": [":arm_lib"],
      #     },
      #     no_match_error = "Sorry, haven't figured out that architecture yet. Feel free to fix and pull request it."
      # ),
  includes = ["audio"],
  visibility = ["//visibility:private"]
)

cc_library(
  name = "cg",
  srcs = [
      "cg/cst_cg.c",
      "cg/cst_mlsa.c", 
      "cg/cst_mlpg.c", 
      "cg/cst_vc.c", 
      "cg/cst_cg_load_voice.c",
      "cg/cst_cg_dump_voice.c", 
      "cg/cst_cg_map.c", 
      "cg/cst_spamf0.c"
  ],
  hdrs = [
      "cg/cst_mlsa.h",
      "cg/cst_mlpg.h",
      "cg/cst_vc.h",
      "cg/cst_cg_map.h",
      "cg/cst_spamf0.h"
  ],
  deps = [
      ":audio",
      ":stats"
  ],
  includes = ["src/cg"],
  visibility = ["//visibility:private"]
)

cc_library(
    name = "hrg",
    srcs = [
        "hrg/cst_utterance.c",
        "hrg/cst_relation.c",
        "hrg/cst_item.c",
        "hrg/cst_ffeature.c",
        "hrg/cst_rel_io.c"
    ],
    deps = [
        "//:headers",
        ":utils",
    ],
    includes = ["hrg"],
    visibility = ["//visibility:private"]
)

cc_library(
    name = "lexicon",
    srcs = [
        "lexicon/cst_lexicon.c", 
        "lexicon/cst_lts.c", 
        "lexicon/cst_lts_rewrites.c"
    ],
    includes = ["lexicon"],
    deps = [
        "//:headers",
    ],
    visibility = ["//visibility:private"]
)

cc_library(
  name = "regex",
  srcs = [
    "regex/cst_regex.c",
    "regex/regexp.c", 
    "regex/regsub.c",
  ],
  hdrs = ["regex/cst_regex_defs.h"],
  deps = [
    ":hrg"
  ],
  includes = ["regex"],
  visibility = ["//visibility:private"]
)

cc_library(
  name = "speech",
  srcs = ["speech/cst_wave.c", 
          "speech/cst_wave_io.c", 
          "speech/cst_track.c", 
          "speech/cst_track_io.c",
          "speech/cst_wave_utils.c", 
          "speech/cst_lpcres.c", 
          "speech/rateconv.c",
          "speech/g721.c", 
          "speech/g72x.c", 
          "speech/g723_24.c", 
          "speech/g723_40.c"],
  hdrs = ["speech/g72x.h"],
  deps = [
    "//:headers",
  ],
  includes = ["speech"],
  visibility = ["//visibility:private"]
)

cc_library(
  name = "stats",
  srcs = [
    "stats/cst_cart.c",
    "stats/cst_viterbi.c", 
    "stats/cst_ss.c"
  ],
  deps = [
    ":hrg"
  ],
  includes = ["stats"],
  visibility = ["//visibility:private"]
)

cc_library(
  name = "utils",
  srcs = [
    "utils/cst_alloc.c",
    "utils/cst_error.c", 
    "utils/cst_string.c", 
    "utils/cst_wchar.c",
    "utils/cst_tokenstream.c",
    "utils/cst_val.c", 
    "utils/cst_features.c",
    "utils/cst_endian.c",
    "utils/cst_socket.c",
    "utils/cst_val_const.c",
    "utils/cst_val_user.c",
    "utils/cst_args.c",
    "utils/cst_url.c",
    "utils/cst_mmap_posix.c",
    "utils/cst_file_stdio.c",
  ],
  deps = [
    "//:headers",
    ":audio"
  ],
  includes = ["utils"],
  visibility = ["//visibility:private"]
)

cc_library(
  name = "wavesynth",
  srcs = [
    "wavesynth/cst_units.c",
    "wavesynth/cst_clunits.c", 
    "wavesynth/cst_diphone.c",
    "wavesynth/cst_sigpr.c", 
    "wavesynth/cst_sts.c",
    "wavesynth/cst_reflpc.c"
  ],
  deps = [
    ":stats",
  ],
  includes = ["wavesynth"],
  visibility = ["//visibility:private"]
)